Wed Sep 28 14:31:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/IFRService/*S.{h,cpp,inl}:
        * orbsvcs/orbsvcs/IFRService/*S_T.{h,cpp,inl}:
          Regenerated with the latest version of the TAO_IDL compiler

Wed Sep 28 14:12:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * performance-tests/POA/Demux/demux_test_server.cpp:
          Fixed fuzz error

Wed Sep 28 14:53:27 2005  Simon McQueen  <sm@prismtech.com>

        * orbsvcs/tests/Bug_2137_Regression/client.cpp:

          What kind of muppet makes 35 seperate mistakes with emulated
          exception handling in one file ? That would be me.

Wed Sep 28 14:35:26 2005  Simon McQueen  <sm@prismtech.com>

        * tao/WrongTransaction.pidl:

          Changed generation instructions to include use of -SS.

        * tao/WrongTransactionS.h:

          Regenerated using -SS.

        * tao/WrongTransactionS.inl:

          Removed file.

Tue Sep 27 18:23:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/POA/Single_Threaded_POA/Single_Threaded_POA.cpp:
          Emulated exception fix

Mon Sep 26 14:19:42 2005  J.T. Conklin  <jtc@acorntoolworks.com>

	* orbsvcs/orbsvcs/Makefile.am:

	  Regenerated.

	* orbsvcs/orbsvcs/DsLogAdmin.mpc:

	  Added "Log/LogStore.h" to Header_Files in the DsLogAdmin_Serv
	  project.

Mon Sep 26 09:47:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/Scheduler_Factory.cpp:
          Wchar fix

        * orbsvcs/orbsvcs/RTEvent.mpc:
        * orbsvcs/orbsvcs/RTEvent_Skel.mpc:
          Added export files to the header section so that they get copied
          on install

Mon Sep 26 09:30:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/Event_Service/Event_Service.cpp:
          Corrected the way we check whether we should create a persistent POA
          or not.

Mon Sep 26 07:34:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>
