@@ -2026,6 +2026,7 @@ Jin Zhi Ye <jinzhiye at kedacom dot com>
 David Carlton <david dot carlton at sun dot com>
 Felix Li <fengli at gmail dot com>
 Michael van der Westhuizen <r1mikey at gmail dot com>
+Jan Zima <Jan dot Zima at sofis dot cz>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson in the early 1990's.  Paul devised the recursive Makefile
